Upgrade: Card, list Fix: Button align

--- a/src/app/smn-ui/button/button.component.scss
+++ b/src/app/smn-ui/button/button.component.scss
@@ -55,7 +55,7 @@
 
     .ui-button {
         &.mini:not(:last-child) {
-            margin-right: 12px;
+            margin-right: 13px;
         }
     }
 
