--- a/src/app/smn-ui/card/card.component.scss
+++ b/src/app/smn-ui/card/card.component.scss
@@ -44,6 +44,16 @@ ui-card {
         display: block;
     }
 
+    ui-card-media {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .user-letter {
+            font-size: 42px;
+        }
+    }
+
     ui-card-content {
         display: block;
         padding: 16px;
