--- a/src/app/smn-ui/list/list.component.scss
+++ b/src/app/smn-ui/list/list.component.scss
@@ -45,6 +45,7 @@
             align-items: center;
             justify-content: center;
             text-align: center;
+            text-transform: uppercase;
         }
 
         &.multi-line {
